# bevy-game

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/models/ivory/: ivory.glb
assets/models/world/: enemy.glb
src/: main.rs
src/actions/: attack.rs  conditions.rs  mod.rs
src/agent/: health.rs  mod.rs
src/animation/: mod.rs
src/camera/: mod.rs
src/input/: mod.rs
src/setup/: mod.rs
src/utils/: mod.rs
