[package]
name = "bevy_3d_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["jpeg"] }
leafwing-input-manager = "0.10.0"
iyes_progress = { version = "0.9", features = ["assets"] }
bevy_rapier3d = "0.22.0"
big-brain = "0.18.0"
rand = "0.8.5"
