[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.2", features = ["jpeg"] }
leafwing-input-manager = "0.10.0"
iyes_progress = { version = "0.9", features = ["assets"] }
bevy_rapier3d = "0.22.0"
big-brain = "0.18.0"
rand = "0.8.5"
bevy_health_bar3d = "1.4.4"
